--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/node": "^18.15.3",
+		"@types/turndown": "^5.0.1",
 		"rippleui": "^1.9.2",
+		"turndown": "^7.1.1",
 		"typesafe-i18n": "^5.24.2"
 	}
 }
