--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
+		"test": "jest",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -24,14 +25,17 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"jest": "^29.5.0",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.9.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.2.7",
+		"ts-jest": "^29.1.0",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
+		"typescript": "^4.9.5",
 		"vite": "^4.0.0"
 	},
 	"type": "module",
