--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"jest": "^29.5.0",
+		"jest-environment-jsdom": "^29.5.0",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.9.0",
