feat: update action to be triggered on pull-requests, when they are opened and subsequent commits are pushed

--- a/.github/workflows/ci-svelte.yaml
+++ b/.github/workflows/ci-svelte.yaml
@@ -1,7 +1,7 @@
 name: Svelte Continuous Integration
 on:
-  push:
   pull_request:
+    types: [opened, synchronize]
 
 jobs:
   continuous-integration:
